tests/compile-fail/derive_salsa_value_ref.rs
#[derive(salsa::SalsaValue)]
struct ContainsRef<'db> {
    value: &'db str,
}

fn main() {}
