tests/compile-fail/derive_salsa_value_ref.stderr
error: a reference tied to the database lifetime does not implement `SalsaValue`; store owned data or a Salsa handle instead
 --> tests/compile-fail/derive_salsa_value_ref.rs:3:12
  |
3 |     value: &'db str,
  |            ^^^^^^^^
